updated images for concert headers

--- a/_posts/concerts-2025/2025-9-12-EMPAC.md
+++ b/_posts/concerts-2025/2025-9-12-EMPAC.md
@@ -21,7 +21,7 @@ program:
   - composer: Igor Santos
     title: Imaginary Traces for the [Switch~ Ensemble]
     year: 2025
-headerImage: headers/2025/EMPAC_NW_Face.jpg
+headerImage: headers/2025/1000px/EMPAC_NW_Face_1000.jpg.jpg
 thumbnail: updates/2025/EMPAC_NW_Face_330.jpg
 500pxImage: updates/2025/EMPAC_NW_Face_500.jpg
 photosFolder: EMPAC
