--- a/_posts/concerts-2024/2024-06-12-buffalo.md
+++ b/_posts/concerts-2024/2024-06-12-buffalo.md
@@ -28,7 +28,7 @@ program:
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
-header: header-switch-copper.jpg
+header: headers/2024/1000px/JiB-2024-Pluta-stage_1000px.jpg
 ---
 
 Our second year as ensemble-in-residence at the June in Buffalo Festival includes works by Karola Obermüller, Ricardo Zohn-Muldoon, Amy Williams, Hilda Parades, and Sam Pluta, as well as works by five participant composers.
