ps21 image update

--- a/_posts/concerts-2022/2022-11-18-ps21.md
+++ b/_posts/concerts-2022/2022-11-18-ps21.md
@@ -26,7 +26,7 @@ program:
 text:
   below: ""
 thumbnail: updates/switch-press_330.jpg
-header: header-switch-copper.jpg
+header: headers/2022/1000px/Cheah PS21-still-trio_1000.jpg
 ---
 
 Tickets: $25 General, $20 PS21 Members, *FREE* Students & Youth
