fixes for pascal, inga, sarah

--- a/_posts/announcements-2024/2024-08-22-barlow.md
+++ b/_posts/announcements-2024/2024-08-22-barlow.md
@@ -9,5 +9,4 @@ header: updates/2024/pascal-barlow.jpg
 ---
 
 We are thrilled that Pascal Le Boeuf has been awarded a commission for the [Switch~ Ensemble] from the Barlow Endowment for Music Composition, for a new  work for sextet and electronics! 
-Press Release: 
-<a href="https://barlow.byu.edu/commission-recipients">https://barlow.byu.edu/commission-recipients</a>
+Press Release: <a href="https://barlow.byu.edu/commission-recipients">Barlow Commission Recipients</a>
