corrected UCSB -- missing images

--- a/_posts/concerts-2026/2026-5-23-UCSB.md
+++ b/_posts/concerts-2026/2026-5-23-UCSB.md
@@ -24,11 +24,11 @@ program:
   - composer: Andrew Watts
     title: Saturation Triplex for the [Switch~ Ensemble]
     year: 2026
-headerImage: headers/2025/1000px/EMPAC_NW_Face_1000.jpg.jpg
-thumbnail: updates/switch-press_330.jpg
-header: headers/2023/1000px/Switch-Feb.9-Watkins-Cheah-Eastman-Pluta_Clemente_1000px.jpg
-500pxImage: updates/2025/EMPAC_NW_Face_500.jpg
-photosFolder: EMPAC
+headerImage: 
+thumbnail: 
+header: 
+500pxImage: 
+photosFolder: UCSB
 tags:
   - 2026
   - EMPAC
