--- a/_posts/concerts-2026/2026-5-23-UCSB.md
+++ b/_posts/concerts-2026/2026-5-23-UCSB.md
@@ -24,8 +24,8 @@ program:
   - composer: Andrew Watts
     title: Saturation Triplex for the [Switch~ Ensemble]
     year: 2026
-headerImage: 
-thumbnail: 
+headerImage: updates/2026/ucsb-ccs.jpeg
+thumbnail: updates/2026/ucsb-ccs-400px.jpeg
 header: 
 500pxImage: 
 photosFolder: UCSB
