concert work years up to 2016 added

--- a/_posts/concerts-2014/2014-06-02-nycemf.md
+++ b/_posts/concerts-2014/2014-06-02-nycemf.md
@@ -11,9 +11,9 @@ location:
   zip: 10002
 program:
   - composer: Christopher Chandler
-    title: Smoke and Mirrors
+    title: Smoke and Mirrors (2013)
   - composer: Jason Thorpe Buchanan
-    title: "Asymptotic Flux: First Study in Entropy"
+    title: "Asymptotic Flux: First Study in Entropy (2012)"
 header: repertoire-images/thorpebuchanan_asymptoticflux_1000x500px.jpg
 
 ---
