concert work years 2018 up to date

--- a/_posts/concerts-2018/2018-09-14-spectrum.md
+++ b/_posts/concerts-2018/2018-09-14-spectrum.md
@@ -13,15 +13,15 @@ location:
   zip: 11205
 program:
   - composer: Katherine Balch
-    title: Music about Glowworms I. Thread Unfurled
-  - composer: Clara Iannotta
-    title: dead wasps in the jam-jar (i)
+    title: Music about Glowworms I. Thread Unfurled (2016)
+  - composer: Clara Iannotta 
+    title: dead wasps in the jam-jar (i) (2015)
   - composer: Timothy McCormack
-    title: DRIFT MATTER
+    title: DRIFT MATTER (2013)
   - composer: Chaya Czernowin
-    title: Ina
+    title: Ina (1988)
   - composer: Piyawat Louilarpprasert
-    title: silhouette
+    title: silhouette (2018)
 thumbnail: updates/spectrum-switch-2018.jpg
 header: auto-add/spectrum/2018-switch-spectrum-1.jpg
 ---
