2019 work years up to date, changed concert listing html to include work year under year: listing

--- a/_posts/concerts-2019/2019-02-28-arete.md
+++ b/_posts/concerts-2019/2019-02-28-arete.md
@@ -16,13 +16,13 @@ location:
   zip: 11222
 program:
   - composer: Sivan Eldar
-    title: Tarr
+    title: Tarr (2014)
   - composer: Esaias Järnegard
-    title: Songs for Antonin
+    title: Songs for Antonin (2018)
   - composer: Timothy McCormack
-    title: karst survey
+    title: karst survey (2016)
   - composer: Adrien Trybucki
-    title: Infinite Extension
+    title: Infinite Extension (2017)
 thumbnail: repertoire-images/ibarra_berkeley_1000x500.jpg
 header: repertoire-images/trybucki-infinite-extension_1000.jpg
 
