formatting for concerts - work years -- up to 2019 corrected

--- a/_posts/concerts-2014/2014-06-02-nycemf.md
+++ b/_posts/concerts-2014/2014-06-02-nycemf.md
@@ -11,9 +11,11 @@ location:
   zip: 10002
 program:
   - composer: Christopher Chandler
-    title: Smoke and Mirrors (2013)
+    title: Smoke and Mirrors
+    year: 2013
   - composer: Jason Thorpe Buchanan
-    title: "Asymptotic Flux: First Study in Entropy (2012)"
+    title: "Asymptotic Flux: First Study in Entropy"
+    year: 2012
 header: repertoire-images/thorpebuchanan_asymptoticflux_1000x500px.jpg
 
 ---
