--- a/_posts/concerts-2018/2018-09-14-spectrum.md
+++ b/_posts/concerts-2018/2018-09-14-spectrum.md
@@ -13,15 +13,20 @@ location:
   zip: 11205
 program:
   - composer: Katherine Balch
-    title: Music about Glowworms I. Thread Unfurled (2016)
+    title: Music about Glowworms I. Thread Unfurled
+    year: 2016
   - composer: Clara Iannotta 
-    title: dead wasps in the jam-jar (i) (2015)
+    title: dead wasps in the jam-jar (i)
+    year: 2015
   - composer: Timothy McCormack
-    title: DRIFT MATTER (2013)
+    title: DRIFT MATTER
+    year: 2013
   - composer: Chaya Czernowin
-    title: Ina (1988)
+    title: Ina
+    year: 1988
   - composer: Piyawat Louilarpprasert
-    title: silhouette (2018)
+    title: silhouette
+    year: 2018
 thumbnail: updates/spectrum-switch-2018.jpg
 header: auto-add/spectrum/2018-switch-spectrum-1.jpg
 ---
