--- a/_posts/concerts-2019/2019-02-28-arete.md
+++ b/_posts/concerts-2019/2019-02-28-arete.md
@@ -16,13 +16,17 @@ location:
   zip: 11222
 program:
   - composer: Sivan Eldar
-    title: Tarr (2014)
+    title: Tarr
+    year: 2014
   - composer: Esaias Järnegard
-    title: Songs for Antonin (2018)
+    title: Songs for Antonin
+    year: 2018
   - composer: Timothy McCormack
-    title: karst survey (2016)
+    title: karst survey
+    year: 2016
   - composer: Adrien Trybucki
-    title: Infinite Extension (2017)
+    title: Infinite Extension
+    year: 2017
 thumbnail: repertoire-images/ibarra_berkeley_1000x500.jpg
 header: repertoire-images/trybucki-infinite-extension_1000.jpg
 
