concerts up to 2021 updated

--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -15,7 +15,7 @@ location:
   zip: 10018
 program:
   - composer: Katharina Rosenberger
-    title: Up-Close
+    title: Up Close
     year: 2019
   - composer: Jason Thorpe Buchanan
     title: soliloquios del viento
@@ -25,7 +25,7 @@ program:
     year: 2017     
   - composer: Cathy van Eck
     title: Wings
-    year:  
+    year: 2008
   - composer: Dieter Ammann
     title: CUTE
     year: 2011
