--- a/_posts/concerts-2021/2021-04-24-seamus.md
+++ b/_posts/concerts-2021/2021-04-24-seamus.md
@@ -22,11 +22,13 @@ program:
     year: 2019
   - composer: Eren Gumrukcuoglu
     title: Pareidolia - Section V
+    year: 2019
   - composer: Ted Moore
     title: quartet
     year: 2021
   - composer: Annea Lockwood
     title: Jitterbug
+    year: 2007
 text:
   below:
 thumbnail: updates/seamus2021-330.jpg
