--- a/_posts/concerts-2021/2021-10-15-dimenna.md
+++ b/_posts/concerts-2021/2021-10-15-dimenna.md
@@ -11,10 +11,10 @@ location:
   address: 450 W 37th St.
   city: New York
   state: NY
-  zip: 10018 d
+  zip: 10018 
 program:
   - composer: Katharina Rosenberger
-    title: Up-Close
+    title: Up Close
     year: 2019
   - composer: Jason Thorpe Buchanan
     title: soliloquios del viento
@@ -27,7 +27,7 @@ program:
     year: 2021     
   - composer: Cathy van Eck
     title: Wings
-    year:  
+    year:  2008
   - composer: Dieter Ammann
     title: CUTE
     year: 2011
