--- a/_posts/concerts-2021/2021-10-30-sinuston.md
+++ b/_posts/concerts-2021/2021-10-30-sinuston.md
@@ -25,7 +25,7 @@ program:
     title: quartet
     year: 2021     
   - composer: Katharina Rosenberger
-    title: Up-Close
+    title: Up Close
     year: 2019
 text:
   below: "This engagement is supported by Mid Atlantic Arts through USArtists International in partnership with the National Endowment for the Arts and the Andrew W. Mellon Foundation."
