repertoire and concert updates, stopped before PS21

--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -19,7 +19,7 @@ program:
     year: 2019
   - composer: Jason Thorpe Buchanan
     title: soliloquios del viento
-    year: 2017
+    year: 2016/rev.2017
   - composer: Clay Mettens
     title: Into the empty sky
     year: 2017     
