--- a/_posts/concerts-2021/2021-10-30-sinuston.md
+++ b/_posts/concerts-2021/2021-10-30-sinuston.md
@@ -20,7 +20,7 @@ program:
     year: 2016
   - composer: Jason Thorpe Buchanan
     title: soliloquios del viento
-    year: 2017  
+    year: 2016/rev.2017
   - composer: Ted Moore
     title: quartet
     year: 2021     
