--- a/_posts/concerts-2022/2022-02-13-mizzou.md
+++ b/_posts/concerts-2022/2022-02-13-mizzou.md
@@ -15,10 +15,13 @@ location:
 program:
   - composer: Leilehua Lanzilotti
     title: hānau ka ua (born is the rain)
+    year: 2021
   - composer: Christopher Chandler
     title: Strata
+    year: 2021
   - composer: Heather Stebbins
     title: Among Arrows
+    year: 2021
 text:
   below: ""
 thumbnail: updates/wings-3-cam1-2-330.jpg
