--- a/_posts/concerts-2022/2022-02-15-mizzou.md
+++ b/_posts/concerts-2022/2022-02-15-mizzou.md
@@ -15,15 +15,19 @@ location:
 program:
   - composer: Jason Thorpe Buchanan
     title: soliloquios del viento
-    year: "2016; rev. 2017"
+    year: 2016/rev.2017
   - composer: Cathy Van Eck
     title: Wings
+    year: 2008
   - composer: Luis Bezerra
     title: Invisible Heritage
+    year: 2021
   - composer: Oswald Huynh
     title: Black Petal
+    year: 2021
   - composer: Anna-Louise Walton
     title: Uttered
+    year: 2018
 text:
   below: ""
 thumbnail: updates/2021-switch-soliloquios-19-330.jpg
