--- a/_posts/concerts-2022/2022-03-29-buffalo.md
+++ b/_posts/concerts-2022/2022-03-29-buffalo.md
@@ -15,6 +15,7 @@ location:
 program:
 - composer: Heather Stebbins
   title: Among Arrows
+  year: 2021
 - composer: Santiago Diez Fischer
   title: perpetual green switch
   year: 2022
@@ -22,10 +23,11 @@ program:
   title: Crossing
   year: 2022
 - composer: Forbes Graham
-  title: Inflection
+  title: "Inflection: Beacon Hill/Roxbury"
   year: 2022    
 - composer: David Felder
   title: a garland (for Bruce)
+  year: 2015
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
