--- a/_posts/concerts-2022/2022-04-23-colby.md
+++ b/_posts/concerts-2022/2022-04-23-colby.md
@@ -15,11 +15,13 @@ location:
 program:
 - composer: José Martínez
   title: 39 inside
+  year: 2019
 - composer: Kelley Sheehan
   title: the bends
   year: 2021
 - composer: Heather Stebbins
   title: Among Arrows
+  year: 2021
 - composer: Forbes Graham
   title: "Inflection: Beacon Hill/Roxbury"
   year: 2022
