--- a/_posts/concerts-2022/2022-05-23-union.md
+++ b/_posts/concerts-2022/2022-05-23-union.md
@@ -15,12 +15,16 @@ location:
 program:
 - composer: Christopher Chandler
   title: still life
+  year: 2022
 - composer: Heather Stebbins
   title: Among Arrows
+  year: 2021
 - composer: Christopher Chandler
   title: cicada song
+  year: 2022
 - composer: Leilehua Lanzilotti
   title: hānau ka ua (born is the rain)
+  year: 2021
 text:
   below: ""
 thumbnail: updates/switch-press_330.jpg
