--- a/_posts/concerts-2022/2022-11-18-ps21.md
+++ b/_posts/concerts-2022/2022-11-18-ps21.md
@@ -16,13 +16,17 @@ location:
   zip: 12037
 program:
 - composer: Sarah Hennies
-  title: Everything Else (2016)
+  title: Everything Else
+  year: 2016
 - composer: Victoria Cheah
-  title: Hard Columns You Within (2022)
+  title: Hard Columns You Within
+  year: 2022
 - composer: Julius Eastman
-  title: Buddha (1984)
+  title: Buddha
+  year: 1984
 - composer: Jen Kutler
-  title: Chatter Marks (2022)
+  title: Chatter Marks
+  year: 2022
 text:
   below: ""
 thumbnail: updates/switch-press_330.jpg
