2023 concerts up to date

--- a/_posts/concerts-2023/2023-03-02-buffalo.md
+++ b/_posts/concerts-2023/2023-03-02-buffalo.md
@@ -15,12 +15,16 @@ location:
 program:
 - composer: Tonia Ko
   title: Breath, Contained II
+  year: 2015
 - composer: Heather Stebbins
   title: Ursa Major
+  year: 2017
 - composer: David Felder
   title: partial [dist]res[s]toration
+  year: 2002
 - composer: Jason Thorpe Buchanan
   title: all-forgetting-is-retrieval
+  year: 2019
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
