2024 up to date, do 2025 once rep is confirmed

--- a/_posts/concerts-2024/2024-06-12-buffalo.md
+++ b/_posts/concerts-2024/2024-06-12-buffalo.md
@@ -14,17 +14,26 @@ location:
   zip: 14260
 program:
 - composer: Ricardo Zohn-Muldoon
-  title: 
+  title: Jácaras
+  year: 2005
 - composer: Karola Obermüller
-  title: 
+  title: One Another
+  year: 2018
 - composer: Amy Williams
-  title: 
+  title: Child’s Play
+  year: 2015
+- composer: Ricardo Zohn-Muldoon
+  title: Flores del Viento I
+  year: 1989
 - composer: Hilda Paredes
-  title: 
+  title: Juegos Prohobidos
+  year: 2019
 - composer: Karola Obermüller
-  title: 
+  title: Reflejos Distantes
+  year: 2006
 - composer: Sam Pluta
-  title: 
+  title: Tectonics
+  year: 2023
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
