--- a/_posts/concerts-2024/2024-06-13-buffalo.md
+++ b/_posts/concerts-2024/2024-06-13-buffalo.md
@@ -13,14 +13,12 @@ location:
   state: NY
   zip: 14260
 program:
-- composer: Jiaqi Want
+- composer: Jiaqi Wang
   title: Crossroads of The Earth
   year: 2024
 - composer: Justin Zeitlinger
-  title: 
-- composer: Amy Williams
-  title: YTBF
-  year: 2024
+  title: YTBF 
+  year: "2020/rev.2024"
 - composer: Lisa Yoshida
   title: Hibiscus
   year: 2024
