buffalo rep updated

--- a/_posts/concerts-2025/2025-06-04-buffalo.md
+++ b/_posts/concerts-2025/2025-06-04-buffalo.md
@@ -14,17 +14,26 @@ location:
   zip: 14260
 program:
 - composer: George Lewis
-  title: 
+  title: Anthem
+  year: 2011
 - composer: Ming Tsao
-  title: 
+  title: Canon
+  year: 2001
 - composer: Karola Obermüller
-  title: 
+  title: Quicksand
+  year: 2024
 - composer: David Sanford
-  title: 
+  title: Grace Canticles
+  year: 2012
 - composer: Peter Gilbert
-  title: 
-- composer: 
-  title: 
+  title: Meditation upon the Awakening of the Spirit
+  year: 2021
+- composer: Ming Tsao
+  title: Dritte Stimme zu Bachs zweistimmigen Rätselkanons
+  year: 2023
+- composer: Karola Obermüller
+  title: Red Lake Fiels 2
+  year: 2002
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
