added missing brooklyn college concert

--- a/_posts/concerts-2024/2024-06-13-buffalo.md
+++ b/_posts/concerts-2024/2024-06-13-buffalo.md
@@ -23,7 +23,7 @@ program:
   title: Hibiscus
   year: 2024
 - composer: Daniel Zlatkin
-  title: The Life and Death of 9413-a Hollywood Extra
+  title: 9413
   year: 2024
 - composer: Jay Rauch
   title: scrub_2
